--- a/package.json
+++ b/package.json
@@ -13,15 +13,20 @@
     "i18next": "^21.8.0",
     "i18next-browser-languagedetector": "^6.1.4",
     "i18next-http-backend": "^1.4.0",
+    "klaytn": "0.0.1",
     "owl.carousel": "^2.3.4",
     "react": "^18.0.0",
     "react-bootstrap": "^2.2.3",
     "react-dom": "^18.0.0",
     "react-i18next": "^11.16.9",
     "react-icons": "^4.3.1",
+    "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^4.0.3",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.0.1",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
